# oxicrm

./: .gitignore  Cargo.toml  verify_custom_object_data.sh  verify_metadata.sh
e2e-tests/: package-lock.json  package.json  playwright.config.js
e2e-tests/tests/: calendar-event-management.spec.js  email-system.spec.js  lead-management.spec.js  note-management.spec.js  opportunity-management.spec.js  task-management.spec.js  workflow-management.spec.js
migration/: Cargo.toml
migration/src/: lib.rs  m20240130_000001_create_table.rs  m20240130_000002_create_users.rs  m20240130_000003_create_workspaces.rs  m20240130_000004_enhance_people.rs  m20240130_000005_create_companies.rs  m20240130_000006_create_email_system.rs  m20240130_000007_create_lead_system.rs  m20240130_000008_create_metadata_engine.rs  m20240130_000009_create_custom_object_data.rs  m20240130_000010_add_workspace_id.rs
src/: main.rs
src/application/: mod.rs
src/application/events/: email_subscriber.rs  lead_subscriber.rs  mod.rs
src/application/jobs/: email_worker.rs
src/application/ports/: billing.rs  email.rs  external.rs  identity.rs  input.rs  messaging.rs  mod.rs  output.rs  scheduling.rs  search.rs  storage.rs  time.rs
src/application/use_cases/: convert_lead.rs  create_calendar_event.rs  create_company.rs  create_lead.rs  create_note.rs  create_opportunity.rs  create_person.rs  create_task.rs  create_timeline_activity.rs  create_workflow.rs  (+19 more)
src/domain/: custom_object_data.rs  entities.rs  invariants.rs  metadata.rs  mod.rs  states.rs
src/infrastructure/: mod.rs
src/shared/: mod.rs
(+45 files in other folders)
